--- a/OOP/OOP_lab3/OOP_lab3/OOP_lab3.csproj
+++ b/OOP/OOP_lab3/OOP_lab3/OOP_lab3.csproj
@@ -43,11 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\Animal.cs" />
+    <Compile Include="Animals\All.cs" />
+    <Compile Include="Animals\Bear.cs" />
+    <Compile Include="Signals\BearSignal.cs" />
+    <Compile Include="Animals\Giraffe.cs" />
+    <Compile Include="Signals\GiraffeSignal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Abstract\Vote.cs" />
+    <Compile Include="Animals\Wolf.cs" />
+    <Compile Include="Signals\WolfSignal.cs" />
+    <Compile Include="Zoo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
